--- a/src/Bix/IO.WebApi/Bix.IO.WebApi.csproj
+++ b/src/Bix/IO.WebApi/Bix.IO.WebApi.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net462;net472</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
     <LangVersion>latest</LangVersion>
     <Description>IO tooling used for fast network data transfer</Description>
