--- a/src/Bix/Core.Tests/Bix.Core.Tests.csproj
+++ b/src/Bix/Core.Tests/Bix.Core.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFrameworks>netcoreapp2.0;net462;net472</TargetFrameworks>
     <IsPackable>false</IsPackable>
     <RootNamespace>Bix.Core</RootNamespace>
     <Platforms>AnyCPU;x64</Platforms>
