--- a/src/Bix/Autofac/Bix.Autofac.csproj
+++ b/src/Bix/Autofac/Bix.Autofac.csproj
@@ -30,6 +30,7 @@
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.8.1" />
     <PackageReference Include="HangFire.Autofac" Version="2.3.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
 </Project>
