--- a/src/Bix/Repositories/Restful.HttpClient/Bix.Repositories.Restful.HttpClient.csproj
+++ b/src/Bix/Repositories/Restful.HttpClient/Bix.Repositories.Restful.HttpClient.csproj
@@ -29,7 +29,7 @@
 
   <ItemGroup Condition="'$(TargetFramework)'=='net472'">
 	<!-- https://github.com/Microsoft/dotnet/blob/master/releases/net472/KnownIssues/613745%20-%20Single-name%20references%20are%20removed%20by%20the%20SDK%20when%20targeting%204.7.2.md -->
-    <PackageReference Include="System.Net.Http" Version="4.3.3">
+    <PackageReference Include="System.Net.Http" Version="4.3.4">
       <ExcludeAssets>All</ExcludeAssets>
     </PackageReference>
 	<Reference Include="System.Net.Http" />
@@ -37,10 +37,14 @@
 
   <ItemGroup Condition="'$(TargetFramework)'!='net472'">
 	<!-- https://github.com/Microsoft/dotnet/blob/master/releases/net472/KnownIssues/613745%20-%20Single-name%20references%20are%20removed%20by%20the%20SDK%20when%20targeting%204.7.2.md -->
-    <PackageReference Include="System.Net.Http" Version="4.3.3" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Serilog" Version="2.7.1" />
   </ItemGroup>
