--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,26 +1,29 @@
-version: 1.0.{build}
 image: Visual Studio 2019
 configuration: Release
 platform: Any CPU
-before_build:
-- cmd: nuget restore src\Bix.sln
+
+version: 3.0.0.{build}
+
+install: 
+  - cmd: choco install dotnetcore-sdk --pre
+
 build:
   verbosity: minimal
 
-for:
--
-  branches:
-    only:
-      - master
+before_build:
+- ps: ./ModifyVersion.ps1 $env:APPVEYOR_BUILD_FOLDER/src/BixShared.targets $env:APPVEYOR_BUILD_NUMBER
+- cmd: nuget restore src\Bix.sln
 
-    artifacts:
-    - path: '**\*.nupkg'
-      name: Bix Packages
+build_script: dotnet build -c Release "src\Funship.sln"
 
-    deploy:
-    - provider: NuGet
-      api_key:
-        secure: GrDnIO6vODmya/PkBk8B7AbXIjFEjhcdTlnGL46nQ0OTR7qtkFbfVLTnEc6R2j9G
-      artifact: Bix Packages
-      on:
-        branch: master
+artifacts:
+- path: '**\*.nupkg'
+    name: Bix Packages
+
+deploy:
+- provider: NuGet
+    api_key:
+    secure: GrDnIO6vODmya/PkBk8B7AbXIjFEjhcdTlnGL46nQ0OTR7qtkFbfVLTnEc6R2j9G
+    artifact: Bix Packages
+    on:
+    branch: master
